@@ -1,12 +1,7 @@
 {
-  "count": 39,
+  "count": 38,
   "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-11-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-11-15T00:00:00Z",
       "count": 4,
