@@ -1,3 +1,11 @@
+2022-11-28T16:16:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3566616250 # 1070
+* notice: last 14d: unq all: 8 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 382 676 / 402 715
+* notice: next accum: outdated-unq outdated-all / unq all: 383 678 / 402 716
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-14] / []
+
 2022-11-28T08:18:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3562940487 # 1069
 * notice: last 14d: unq all: 8 39
